week 04 project 2 part 2 completion
