# swagger.json
@@ -11,15 +11,28 @@
     "https"
   ],
   "paths": {
-    "/": {
+    "/login": {
       "get": {
         "tags": [
-          "Home"
+          "Authentication"
         ],
         "description": "",
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/logout": {
+      "get": {
+        "tags": [
+          "Authentication"
+        ],
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
           }
         }
       }
@@ -69,6 +82,21 @@
                 },
                 "value": {
                   "example": "any"
+                },
+                "age": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "isActive": {
+                  "example": "any"
+                },
+                "role": {
+                  "example": "any"
+                },
+                "createdAt": {
+                  "example": "any"
                 }
               }
             }
@@ -77,6 +105,9 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "422": {
             "description": "Unprocessable Entity"
@@ -111,6 +142,21 @@
                 },
                 "value": {
                   "example": "any"
+                },
+                "age": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "isActive": {
+                  "example": "any"
+                },
+                "role": {
+                  "example": "any"
+                },
+                "createdAt": {
+                  "example": "any"
                 }
               }
             }
@@ -122,6 +168,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "422": {
             "description": "Unprocessable Entity"
@@ -150,6 +199,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
